err/toil-lib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/toil_lib'...
Listing './lib/python3.5/site-packages/toil_lib/test'...
Listing './lib/python3.5/site-packages/toil_lib/tools'...
Compiling './lib/python3.5/site-packages/toil_lib/tools/__init__.py'...
***   File "./lib/python3.5/site-packages/toil_lib/tools/__init__.py", line 25
    print "Using insert size: %d" % mean
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/toil_lib/urls.py'...
***   File "./lib/python3.5/site-packages/toil_lib/urls.py", line 112
    print 'S3AM failed with status code: {}'.format(ret_code)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/toil_lib-1.1.8.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
